--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
         <div class="content-wrapper"> 
              <div class="two-column-wrapper">
                  <div class="profile-image-wrapper">
-                     <img src="images/profile 12.jpg">
+                     <img src="profile 12.jpg">
                  </div>
              <div class="profile-content-wrapper">
                 <h1> Hi, thanks for visiting my site. </h1>
