--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
             
             <div class="right-side">
                 <div class="brand">
-                     <div>SARA MOLKO</div>  
+                     <div>SARA✡MOLKO</div>  
                 </div>
             </div>
         </div>
