--- a/about.html
+++ b/about.html
@@ -55,5 +55,9 @@
         </div>
 
     </div>
+    <div class="logo-wrapper1">
+                                <img src="images/logos/numerical-70x70.png">
+                                <div class="subtitle"> AstrologyFreakⒸ.
+                            </div>
 </body>
 </html>        
