--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                     </div>
                 </div>
                             <div class="logo-wrapper1">
-                                <img src="images/logos/numerical-70x70.png">
+                                <img src="numerical-70x70.png">
                                 <div class="subtitle"> AstrologyFreakⒸ.
                             </div>
                 
