--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 
     </div>
     <div class="logo-wrapper1">
-                                <img src="images/logos/numerical-70x70.png">
+                                <img src="numerical-70x70.png">
                                 <div class="subtitle"> AstrologyFreakⒸ.
                             </div>
 </body>
