--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </div>
                
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/Leo.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(Leo.jpg)"></div>
                
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
