--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <div style="position:relative;"> 
                             <img src="" alt=""> 
                             <button onclick="window.location.href='https://en.wikipedia.org/wiki/Gemini_(astrology)';">
-                                  ♊ 20.05-20.06
+                                  ♊ 20th of May-20th of June
                               </button>
                               <button id="show-button"></button>
                               <button id="hide-button"></button>
@@ -60,7 +60,7 @@
                             <div style="position:relative;">
                                 <img src="" alt="">
                                 <button onclick ="window.location.href='https://en.wikipedia.org/wiki/Aries_(astrology)';">
-                                    ♈ 20.03-19.04
+                                    ♈ 20th of March-19 of April
                                 </button>
                                 <button id="hide-button"></button>
                                 <button id="show-button"></button>
@@ -83,7 +83,7 @@
                         <div class="logo-wrapper">
                             <img src="" alt="">
                             <button onclick="window.location.href='https://en.wikipedia.org/wiki/Taurus_(astrology)';">
-                                ♉ 19.04-20.05
+                                ♉ 19th of April-20th of May
                             </button>
                             <button id="show-button"></button>
                             <button id="hide-button"></button>
@@ -124,7 +124,7 @@
                         <div class="logo-wrapper">
                             <img src="" alt="">
                             <button onclick="window.location.href='https://en.wikipedia.org/wiki/Scorpio_(astrology)';">
-                                ♏22.10-21.11
+                                ♏22nd of October-21st of November
                             </button>
                             <button id="show-button"></button>
                             <button id="hide-button"></button>
@@ -144,7 +144,7 @@
                         <div class="logo-wrapper">
                             <img src="" alt="">
                             <button onclick="window.location.href='https://en.wikipedia.org/wiki/Cancer_(astrology)';">
-                                ♋20.06-22.07
+                                ♋20th of June-22nd of July
                             </button>
                             <button id="show-button"></button>
                             <button id="hide-button"></button>
@@ -164,7 +164,7 @@
                         <div class="logo-wrapper">
                             <img src="" alt="">
                             <button onclick="window.location.href='https://en.wikipedia.org/wiki/Virgo_(astrology)';">
-                                ♍22.08-22.09
+                                ♍22nd of August-22nd of September
                             </button>
                             <button id="show-button"></button>
                             <button id="hide-button"></button>
@@ -184,7 +184,7 @@
                         <div class="logo-wrapper">
                             <img src="" alt="">
                             <button onclick="window.location.href='https://en.wikipedia.org/wiki/Libra_(astrology)';">
-                                ♎22.09-22.10
+                                ♎22nd of September-22nd of October
                             </button>
                             <button id="show-button"></button>
                             <button id="hide-button"></button>
@@ -204,7 +204,7 @@
                         <div class="logo-wrapper">
                             <img src="" alt="">
                             <button onclick="window.location.href='https://en.wikipedia.org/wiki/Aquarius_(astrology)';">
-                                ♒20.01-19.02
+                                ♒20th of January-19th of February
                             </button>
                             <button id="show-button"></button>
                             <button id="hide-button"></button>
@@ -224,7 +224,7 @@
                         <div class="logo-wrapper">
                             <img src="" alt="">
                             <button onclick="window.location.href='https://en.wikipedia.org/wiki/Sagittarius_(astrology)';">
-                                ♐21.11-21.12
+                                ♐21st of Novembre-21st of December
                             </button>
                             <button id="show-button"></button>
                             <button id="hide-button"></button>
@@ -244,7 +244,7 @@
                         <div class="logo-wrapper">
                             <img src="" alt="">
                             <button onclick="window.location.href='https://en.wikipedia.org/wiki/Capricorn_(astrology)';">
-                                ♑21.12-19.01
+                                ♑21st of December-19th of January
                             </button>
                             <button id="show-button"></button>
                             <button id="hide-button"></button>
@@ -264,7 +264,7 @@
                         <div class="logo-wrapper">
                             <img src="" alt="">
                             <button onclick="window.location.href='https://en.wikipedia.org/wiki/Pisces_(astrology)';">
-                                ♓19.02-20.03
+                                ♓19th of February-20th of March
                             </button>
                             <button id="show-button"></button>
                             <button id="hide-button"></button>
