--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <div class="logo-wrapper">
                             <img src="" alt="">
                             <button onclick="window.location.href='https://en.wikipedia.org/wiki/Leo_(astrology)';">
-                                ♌22.07-22.08
+                                ♌22nd of July-22nd of August
                             </button>
                             <button id="show-button"></button>
                             <button id="hide-button"></button>
